src/auryn/tests/snapshots/auryn__auryn__tests__ui@undefined_function.au.snap
---
source: src/auryn/tests/mod.rs
expression: "fn main() {\n\tlet a: I32 = foo()\n\tprint(a)\n}\n"
input_file: src/auryn/tests/inputs/ui/undefined_function.au
---
Error: Undefined variable
   ╭─[ main:2:15 ]
   │
 2 │     let a: I32 = foo()
   │                  ─┬─  
   │                   ╰─── Undefined variable `foo`
───╯
